# whet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROMPT.md  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/task10_security_fix/: prompt.txt  verify.sh
benchmarks/task11_planning_chain/: prompt.txt  verify.sh
benchmarks/task12_test_gen/: prompt.txt  verify.sh
benchmarks/task13_typescript/: prompt.txt  verify.sh
benchmarks/task14_callsites/: prompt.txt  verify.sh
benchmarks/task15_long_recall/: prompt.txt  verify.sh
benchmarks/task1_hello/: prompt.txt  verify.sh
benchmarks/task2_typo/: prompt.txt  verify.sh
benchmarks/task3_rename/: prompt.txt  verify.sh
benchmarks/task6_debug/: prompt.txt  verify.sh
benchmarks/task7_dedupe/: prompt.txt  verify.sh
benchmarks/task8_cli_filter/: prompt.txt  verify.sh
benchmarks/task9_investigate/: prompt.txt  verify.sh
docs/blog/: building-a-coding-agent-in-rust.md
scripts/: analyze_bench.py  analyze_quant_sweep.py  bench_report.sh  pre-commit  run_bench.sh  setup-hooks.sh
src/: config.rs  lib.rs  main.rs  skills.rs
src/agent/: display.rs  doctor.rs  mod.rs  prompt.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs
src/mcp/: client.rs  mod.rs  protocol.rs  tool_wrapper.rs
src/memory/: store.rs
src/sandbox/: mod.rs  namespace.rs
src/security/: path.rs
src/tools/: apply_diff.rs  edit_file.rs  git.rs  grep.rs  list_dir.rs  mod.rs  read_file.rs  remember.rs  repo_map.rs  shell.rs  (+4 more)
tests/: integration_test.rs
(+61 files in other folders)
