[package]
name = "hermitclaw"
version = "0.1.0"
edition = "2021"
description = "Fully offline, secure-by-default AI agent. The hermit needs no network."

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
colored = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
