[package]
name = "whet"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "An open-source terminal coding agent. Powered by local or cloud LLMs."
license = "MIT"
repository = "https://github.com/kuroko1t/whet"
readme = "README.md"
authors = ["kuroko1t"]
keywords = ["ai", "agent", "llm", "cli", "coding"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
colored = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
